--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,9 @@ script:
   - npm run lint
   - npm run test
   - npm run prepublish
-  - npm publish
 
 deploy:
   provider: npm
-  email: $AUTH_EMAIL
-  api_key: $AUTH_KEY
+  email: $NPM_EMAIL
+  api_key: $NPM_TOKEN
 
