--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,11 @@
     "stripInternal": true,
     "pretty": true,
     "allowSyntheticDefaultImports": true,
+    "lib": [
+      "es6",
+      "dom",
+      "es2017"
+    ],
     "typeRoots": ["./node_modules/@types"]
   },
   "include": [
