--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ampel-ui",
-  "version": "0.2.1",
+  "version": "0.3.0",
   "description": "Ampel UI is a UI component framework written for TypeScript + React",
   "main": "./dist/bundle.js",
   "types": "./dist/src/index.d.ts",
@@ -52,13 +52,13 @@
     "@types/lodash": "^4.14.123",
     "@types/rc-slider": "^8.6.3",
     "@types/rc-tooltip": "^3.7.1",
-    "@types/react-table": "^6.7.23",
+    "@types/react-table": "^6.7.15",
     "@types/yup": "^0.26.12",
     "immutability-helper": "^3.0.0",
     "lodash": "^4.17.11",
     "rc-slider": "^8.6.7",
     "rc-tooltip": "^3.7.3",
-    "react-table": "^6.9.2",
+    "react-table": "~6.8.6",
     "yup": "^0.27.0"
   },
   "resolutions": {
