--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,14 @@
 language: node_js
 
 node_js:
-  - '8'
   - '10'
+
+install:
+  - npm ci
+
+cache:
+  directories:
+    - "$HOME/.npm"
 
 script:
   - npm run lint
