Change tooltip library to match for better customization

--- a/package.json
+++ b/package.json
@@ -67,13 +67,12 @@
   "dependencies": {
     "@types/lodash": "~4.14.136",
     "@types/rc-slider": "8.6.3",
-    "@types/rc-tooltip": "~3.7.1",
     "@types/react-table": "~6.7.15",
     "@types/yup": "~0.26.12",
     "immutability-helper": "~3.0.0",
     "lodash": "~4.17.15",
     "rc-slider": "8.6.7",
-    "rc-tooltip": "~3.7.3",
+    "react-popper-tooltip": "^2.10.1",
     "react-table": "~6.8.6",
     "yup": "~0.27.0"
   },
