--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,8 +1,9 @@
 name: npm-publish
+
 on:
   release:
-    types:
-      - [published]
+    types: [published]
+
 jobs:
   build:
     runs-on: ubuntu-latest
