--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
   "dependencies": {
     "@types/lodash": "~4.14.159",
     "@types/rc-slider": "8.6.3",
+    "@types/react": "^16.9.46",
     "@types/react-table": "~6.7.15",
     "@types/yup": "~0.26.37",
     "immutability-helper": "~3.0.2",
