--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "test:watch": "jest --watch --config jestconfig.json",
     "prepublish": "rm -rf ./dist && npm run build",
     "lint": "tslint-config-prettier-check ./tslint.json",
-    "prettier": "prettier --write \"src/**/*.{ts,tsx}\""
+    "prettier": "prettier --write \"src/**/*.{ts,tsx}\"",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "repository": {
     "type": "git",
@@ -30,11 +32,17 @@
   "author": "Webtrekk GmbH",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.14.6",
+    "@storybook/addon-actions": "^6.3.2",
+    "@storybook/addon-essentials": "^6.3.2",
+    "@storybook/addon-links": "^6.3.2",
+    "@storybook/react": "^6.3.2",
     "@types/jest": "^26.0.10",
     "@types/react": "^16.9.46",
     "@types/react-dom": "^16.9.8",
     "autoprefixer": "^9.8.6",
     "awesome-typescript-loader": "^5.2.1",
+    "babel-loader": "^8.2.2",
     "css-loader": "^2.1.1",
     "dom-testing-library": "^3.17.1",
     "husky": "^2.5.0",
