--- a/package.json
+++ b/package.json
@@ -65,13 +65,13 @@
     "react-dom": "^15.3.0 || 16"
   },
   "dependencies": {
-    "@types/lodash": "~4.14.159",
+    "@types/lodash": "4.14.159",
     "@types/rc-slider": "8.6.3",
     "@types/react": "^16.9.46",
     "@types/react-table": "~6.7.15",
     "@types/yup": "~0.26.37",
     "immutability-helper": "~3.0.2",
-    "lodash": "~4.17.20",
+    "lodash": "4.17.20",
     "rc-slider": "8.6.7",
     "react-popper-tooltip": "^2.10.1",
     "react-table": "~6.8.6",
