--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
     "esModuleInterop": true,
     "stripInternal": true,
     "pretty": true,
+    "skipLibCheck": true,
     "allowSyntheticDefaultImports": true,
     "lib": [
       "es6",
