Attempts to fix the build pipeline by installing yarn and providing a yarn.lock file

--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,4 @@
+registry=https://nexus.internal.mapp.tools/repository/npm-all/
 @mapp-digital:registry=https://nexus-npm-prod.nbg.webtrekk.com/repository/npm-all/
 package-lock=true
 strict-ssl=false
