--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ampel-ui",
-  "version": "0.24.13",
+  "version": "0.24.14",
   "description": "Ampel UI is a UI component framework written for TypeScript + React",
   "main": "./dist/bundle.js",
   "types": "./dist/src/index.d.ts",
@@ -58,7 +58,8 @@
     "typescript": "^3.9.7",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "yarn": "1.22.22"
   },
   "peerDependencies": {
     "react": "^15.3.0 || 16",
