--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,4 @@
+registry=https://registry.npmjs.org/
 @mapp-digital:registry=https://nexus-npm-prod.nbg.webtrekk.com/repository/npm-all/
 package-lock=true
 strict-ssl=false
