--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ampel-ui",
-  "version": "0.24.15",
+  "name": "@mapp-digital/ampel-ui",
+  "version": "0.24.16",
   "description": "Ampel UI is a UI component framework written for TypeScript + React",
   "main": "./dist/bundle.js",
   "types": "./dist/src/index.d.ts",
